fix(style): sidebar item padding being cropped

--- a/wiki/public/scss/wiki.scss
+++ b/wiki/public/scss/wiki.scss
@@ -188,12 +188,6 @@ textarea.wiki-content {
 		margin-right: -0.5rem;
 		padding-top: 0;
 		padding-bottom: 0;
-		.sidebar-items > .list-unstyled > .sidebar-item {
-			margin-left: -0.5rem;
-		}
-		.sidebar-items > .list-unstyled > .sidebar-group {
-			margin-left: -0.7rem;
-		}
 	}
 
 	.management {
